--- a/CVPR-Lab-Website/assets/css/style.css
+++ b/CVPR-Lab-Website/assets/css/style.css
@@ -84,7 +84,7 @@ h6,
 
 #header .logo h1 {
 	font-size: 30px;
-	margin: 0;
+	margin-bottom: 20px;
 	line-height: 1;
 	font-weight: 400;
 	letter-spacing: 2px;
